--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@ command = "hugo --gc --minify --enableGitInfo"
 
     [context.split1.environment]
     HUGO_ENV     = "production"
-    HUGO_VERSION = "0.77.0"
+    HUGO_VERSION = "0.106.0"
 
 [context.deploy-preview]
 command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
@@ -29,3 +29,4 @@ command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
 
 [context.next.environment]
 HUGO_ENABLEGITINFO = "true"
+CI=true
