--- a/data/en/sections/experiences.yml
+++ b/data/en/sections/experiences.yml
@@ -15,7 +15,7 @@ experiences:
     url: "https://arsuaga-vazquez-lab.faculty.ucdavis.edu/"
     location: UC Davis
     # company overview
-    overview: We utilize topological methods to study the 3D organization of DNA and proteins.
+    overview: The Arsuaga-Vasquez lab utilizes topological methods to study the 3D organization of DNA and proteins.
   positions:
   - designation: Research Assistant
     start: April 2022
@@ -34,7 +34,7 @@ experiences:
     url: "https://qna365.com"
     location: Chino
     # company overview
-    overview: We pr
+    overview: Quicklinks Advisor 365 provides accounting and bookkeeping services, Quickbooks consulting and training, and tax preparation and planning.
   positions:
   - designation: Accounting Assistant
     start: Aug 2020    
