--- a/data/en/author.yml
+++ b/data/en/author.yml
@@ -2,7 +2,7 @@
 name: "Claire Hsieh"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, My name is "
-image: "images/avatar.png"
+image: "images/avatar3.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
   email: "chsieh018@gmail.com"
