--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
 baseURL: http://localhost:1313
+url = git@github.com:RococcoCat/RococcoCat.github.io.git
 
 languageCode: en-us
 title: "Claire's Personal Portfolio"
@@ -24,7 +25,7 @@ enableEmoji: true
 # Site parameters
 params:
   # GitHub repo URL of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/RococcoCat/RococcoCat.github.io
 
   # specify whether you want to write some blog posts or not
   enableBlogPost: true
