--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -9,6 +9,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-18.04
+    env: AWS_DEFAULT_REGION
     steps:
     # checkout to the commit that has been pushed
     - uses: actions/checkout@v3
