--- a/config.yaml
+++ b/config.yaml
@@ -61,7 +61,7 @@ params:
     # favicon: /images/site/favicon.png
 
   # GitHub repo of your site
-  gitRepo: https://github.com/RococcoCat/RococcoCat.github.io
+  gitRepo: https://github.com/claire-hsieh
   # Default branch of your Git repo
   gitBranch: main
 
