updated github link

--- a/data/en/sections/about.yml
+++ b/data/en/sections/about.yml
@@ -34,7 +34,7 @@ summary: 'I am a student majoring in Genetics and Genomics and am particularly i
 socialLinks:
 - name: Github
   icon: "fab fa-github"
-  url: "https://github.com/RococcoCat"
+  url: "https://github.com/claire-hsieh"
 
 - name: Linkedin
   icon: "fa-brands fa-linkedin"
