updated about page

--- a/data/en/sections/about.yml
+++ b/data/en/sections/about.yml
@@ -27,7 +27,7 @@ cv: "files/CV.pdf"
 # badge: "https://i.pcmag.com/imagery/reviews/01tPXClg2WjLamQzScplH3y-15.fit_lim.size_1050x591.v1627670281.png"
   
 # a summary about you
-summary: 'I am a student majoring in Genetics and Genomics and am particularly interested in Comparitive Genomics and utilizing bioinformatics to aid drug discovery. Math and computer science have always been a passion of mine and I am so glad to have found a field that applies these techniques in biology.'
+summary: 'I am a student majoring in Genetics and Genomics and am particularly interested in Comparitive Genomics and utilizing bioinformatics to aid drug discovery.'
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
