--- a/data/en/author.yml
+++ b/data/en/author.yml
@@ -14,6 +14,4 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I am a student at UC Davis majoring in Genetics and Genomics with an interest in Computational Biology. My research interests are in comparitive and functional genomics and I hope to one day utilize these fields of study in the discovery of drugs and other biomedical research. 
-  
- 
+  - I am a student at UC Davis majoring in Genetics and Genomics with an interest in Biostatistics and intend to pursue a PhD in this field. My research interests are in statistical genetics and machine learning which I hope to apply in cancer and Alzeihmer's research. 
