--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://roccococat.github.io
+baseURL: http://claire-hsieh.github.io
 
 languageCode: en-us
 title: "Claire's Personal Portfolio"
