--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://github.com/claire-hsieh/claire-hsieh.github.io
+baseURL: https://claire-hsiehs-portfolio.github.io
 
 languageCode: en-us
 title: "Claire's Personal Portfolio"
