--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
+[Dependencies]
+command = "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+
 [build]
 command = "cd exampleSite && hugo --gc --minify"
 publish = "exampleSite/public"
@@ -6,8 +9,8 @@ publish = "exampleSite/public"
 HUGO_ENABLEGITINFO = "true"
 HUGO_ENV           = "production"
 HUGO_VERSION       = "0.120.1"
-NODE_VERSION       = "v18.12.1"
-NPM_VERSION        = "8.19.2"
+NODE_VERSION       = "v20.10.0"
+NPM_VERSION        = "10.2.4"
 
 [context.split1]
 command = "cd exampleSite && hugo mod tidy && hugo mod npm pack && npm install && hugo --gc --minify --enableGitInfo"
@@ -15,24 +18,24 @@ command = "cd exampleSite && hugo mod tidy && hugo mod npm pack && npm install &
     [context.split1.environment]
     HUGO_ENV     = "production"
     HUGO_VERSION = "0.120.1"
-    NODE_VERSION = "v18.12.1"
-    NPM_VERSION  = "8.19.2"
+    NODE_VERSION = "v20.10.0"
+    NPM_VERSION  = "10.2.4"
 
 [context.deploy-preview]
 command = "cd exampleSite && hugo mod tidy && hugo mod npm pack && npm install && hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
     [context.deploy-preview.environment]
     HUGO_VERSION = "0.120.1"
-    NODE_VERSION = "v18.12.1"
-    NPM_VERSION  = "8.19.2"
+    NODE_VERSION = "v20.10.0"
+    NPM_VERSION  = "10.2.4"
 
 [context.branch-deploy]
 command = "cd exampleSite && hugo mod tidy && hugo mod npm pack && npm install && hugo --gc --minify -b $DEPLOY_PRIME_URL"
 
     [context.branch-deploy.environment]
     HUGO_VERSION = "0.120.1"
-    NODE_VERSION = "v18.12.1"
-    NPM_VERSION  = "8.19.2"
+    NODE_VERSION = "v20.10.0"
+    NPM_VERSION  = "10.2.4"
 
 [context.next.environment]
 HUGO_ENABLEGITINFO = "true"
