--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "exampleSite/themes/toha"]
-	path = exampleSite/themes/toha
-	url = https://github.com/hugo-toha/toha.git
 [submodule "themes/toha"]
 	path = themes/toha
 	url = https://github.com/hugo-toha/toha.git
+[submodule "toha"]
+	path = toha
+	url = https://github.com/hugo-toha/toha
 [submodule "themes/hugo-embed-pdf-shortcode"]
 	path = themes/hugo-embed-pdf-shortcode
 	url = https://github.com/anvithks/hugo-embed-pdf-shortcode.git
