--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,9 @@
 [submodule "toha"]
 	path = toha
 	url = https://github.com/hugo-toha/toha
+[submodule "exampleSite/themes/toha"]
+	path = exampleSite/themes/toha
+	url = https://github.com/hugo-toha/toha
 [submodule "themes/hugo-embed-pdf-shortcode"]
 	path = themes/hugo-embed-pdf-shortcode
 	url = https://github.com/anvithks/hugo-embed-pdf-shortcode.git
