--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/hugo-embed-pdf-shortcode"]
 	path = themes/hugo-embed-pdf-shortcode
 	url = https://github.com/anvithks/hugo-embed-pdf-shortcode.git
-[submodule "themes/toha"]
-	path = themes/toha
+[submodule "themes/Toha"]
+	path = themes/Toha
 	url = https://github.com/hugo-toha/toha.git
