--- a/data/en/sections/about.yml
+++ b/data/en/sections/about.yml
@@ -15,7 +15,7 @@ company:
   url: "https://www.ucdavis.edu/"
 
 # your resume. this file path should be relative to you "static" directory
-resume: "files/Resume.pdf"
+resume: "files/resume.pdf"
 cv: "files/CV.pdf"
 # Show your badges
 # You can show your verifiable certificates from https://www.credly.com.
