--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -34,7 +34,7 @@ jobs:
         npm install        
 
     - name: Build
-      run: hugo --minify
+      run: hugo --gc --minify
 
     # push the generated content into the `gh-pages` branch.
     - name: Deploy
